package pers.prover07.dp.structural.bridge;

/**
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/15 11:39
 */
public class AviVideoFile implements VideoFile{
    @Override
    public void play() {
        System.out.println("播放 avi 格式的视频...");
    }
}
