package pers.prover07.dp.structural.bridge;

/**
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/15 11:44
 */
public class Mac extends OperatingSystem{
    @Override
    void play() {
        System.out.println("linux 环境准备...");
        videoFile.play();
    }
}
