package pers.prover07.dp.structural.bridge;

public interface VideoFile {

    void play();

}
