package pers.prover07.dp.structural.bridge;

/**
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/15 11:43
 */
public class Windows extends OperatingSystem{
    @Override
    void play() {
        System.out.println("windows 环境准备...");
        videoFile.play();
    }
}
